kubernetes/infrastructure/logstash/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-ingress
  namespace: logstash
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "omada.logstash.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: logstash
                port:
                  number: 8008
    - host: "monitor.omada.logstash.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: logstash
                port:
                  number: 9600
